# csv-diff-viewer

./: .cta.json  .gitignore  .prettierignore  DEBUGGING.md  PERFORMANCE.md  TESTING.md  TEST_COVERAGE_REPORT.md  eslint.config.js  package-lock.json  package.json  test-fix.js  test-output.md  test-parallel-progress.html  test-shared-buffer.html  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  test.yml
coverage/: coverage-final.json  index.html
coverage/src/: index.html  routeTree.gen.ts.html  router.tsx.html
coverage/src/components/: ConfigPanel.tsx.html  CsvInput.tsx.html  DiffStats.tsx.html  DiffTable.tsx.html  StorageMonitor.tsx.html  index.html  mode-toggle.tsx.html  theme-provider.tsx.html
coverage/src/components/ui/: accordion.tsx.html  alert-dialog.tsx.html  badge.tsx.html  button.tsx.html  card.tsx.html  index.html  input.tsx.html  scroll-area.tsx.html  select.tsx.html  switch.tsx.html  table.tsx.html  textarea.tsx.html  tooltip.tsx.html
coverage/src/hooks/: index.html  useChunkedDiff.ts.html  useCsvWorker.ts.html
coverage/src/lib/: comparison-engine.ts.html  index.html  indexeddb.ts.html  utils.ts.html
coverage/src/routes/: __root.tsx.html  index.html  index.tsx.html
coverage/src/workers/: csv.worker.ts.html  index.html
docs/: ADVANCED_SEARCH.md  ADVANCED_TABLE_FEATURES.md  CHUNKED_PROCESSING.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_FEATURES.md  SHARED_ARRAYBUFFER_FIX.md  TESTING_GUIDE.md  TIME_TO_30_IMPROVEMENTS.md  UI_FEATURE_GUIDE.md  header-analysis-optimization.md  modules_export.md  parallel-thread-improvements.md  wasm-integration.md
public/: coi-serviceworker.js  enable-threads.js  site.webmanifest
refactor/: binary_rs_split.md  core_rs_split.md  diff_utils_split.md  lib_rs_wasm_api.md  module_tests.md  modules_export.md  rayon_shared_memory.md  routes_index_split.md  test_data_split.md
scripts/: track-wasm-size.sh
src/: start.ts  styles.css
src-wasm/: Cargo.toml  TEST_COVERAGE.md  build.sh  rust-toolchain.toml
src-wasm/.cargo/: config.toml
src-wasm/src/: binary.rs  binary_encoder.rs  content_match.rs  core.rs  lib.rs  memory.rs  parallel.rs  parse.rs  primary_key.rs  profiling.rs  streaming.rs  test_data.rs  types.rs  utils.rs  wasm_api.rs  wasm_tests.rs
src-wasm/tests/: parallel_tests.rs  wasm_tests.rs
src/__tests__/: setup.ts
src/__tests__/integration/: indexeddb.test.ts  worker-wasm.test.ts
src/__tests__/performance/: diff-performance.test.ts
src/__tests__/unit/: large-datasets.test.ts
src/__tests__/utils/: test-data-generator.ts
src/components/: AdvancedSearchInput.tsx  ConfigPanel.tsx  CsvInput.tsx  DiffStats.tsx  DiffTable.tsx  PerformanceDashboard.tsx  StorageMonitor.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/AdvancedSearchInput/: TokenPill.tsx  filterFn.test.ts  parser.test.ts  parser.ts
src/components/DiffTable/: CellRenderers.tsx  HeaderControls.tsx  VirtualTable.tsx
src/components/DiffTable/__tests__/: HeaderControls.test.tsx  TypeBadgeCell.test.tsx
src/components/ui/: badge.tsx  button.tsx
src/hooks/: useChunkedDiff.ts  useCsvWorker.ts  usePerformanceConfig.ts  useWorkerStatus.ts
src/lib/: binary-decoder.ts  comparison-engine.ts  csv-parser.ts  dev-logger.ts  indexeddb.ts  memory-leak-prevention.ts  performance-config.ts  performance-metrics.ts  shared-string-decoder.ts
src/routes/: __root.tsx  index.tsx
src/workers/: csv.worker.ts  types.ts  wasm-context.ts  worker-logger.ts
src/workers/handlers/: chunked-diff.ts  compare.ts  parse.ts
