[package]
name = "csv-diff-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1.3"              # Fast, WASM-compatible CSV parsing
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
similar = "2.6"          # Text diff algorithm
ahash = "0.8"            # Fast hashing for HashMaps
getrandom = { version = "0.3", features = ["wasm_js"] }
strsim = "0.11"          # String similarity algorithms (Jaro-Winkler, Levenshtein)

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = 'abort'     # Smaller binary
strip = true        # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
