[package]
name = "csv-diff-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib: WASM binary for browser/Node.js
# rlib: Rust library for testing and integration
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1.3"              # Fast, WASM-compatible CSV parsing
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
similar = "2.6"          # Text diff algorithm
ahash = "0.8"            # Fast hashing for HashMaps
getrandom = { version = "0.3", features = ["wasm_js"] }
strsim = "0.11"          # String similarity algorithms (Jaro-Winkler, Levenshtein)

[dev-dependencies]
serde_json = "1.0"   # For testing binary encoding vs JSON

[profile.release]
opt-level = 3       # Optimize for speed (changed from 'z' for size to '3' for speed)
lto = "fat"         # Fat link-time optimization for maximum performance
codegen-units = 1   # Better optimization (single codegen unit)
panic = 'abort'     # Smaller binary
strip = true        # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory"]  # Maximum optimization + SIMD + bulk memory
