[package]
name = "csv-diff-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib: WASM binary for browser/Node.js
# rlib: Rust library for testing and integration
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1.3"              # Fast, WASM-compatible CSV parsing
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }  # For profiling console output
similar = "2.6"          # Text diff algorithm
ahash = "0.8"            # Fast hashing for HashMaps
getrandom = { version = "0.3", features = ["wasm_js"] }
strsim = "0.11"          # String similarity algorithms (Jaro-Winkler, Levenshtein)
rayon = { version = "1.11", optional = true }  # Data parallelism library (optional for WASM)
wasm-bindgen-rayon = { version = "1.3", optional = true }  # Rayon support for WASM
console_error_panic_hook = "0.1" # Log panics to console

[features]
default = ["parallel"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dev-dependencies]
serde_json = "1.0"   # For testing binary encoding vs JSON
wasm-bindgen-test = "0.3"  # For testing WASM bindings

[profile.release]
opt-level = 3       # Optimize for speed (changed from 'z' for size to '3' for speed)
lto = "fat"         # Fat link-time optimization for maximum performance
codegen-units = 1   # Better optimization (single codegen unit)
strip = true        # Strip symbols
panic = "abort"     # Use abort instead of unwind for smaller code size

# Browser compatibility: SIMD, bulk memory, and threads require:
# - Chrome/Edge 91+ (June 2021)
# - Firefox 89+ (June 2021)
# - Safari 16.4+ (March 2023)
# For older browser support, remove advanced flags
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory", "--enable-threads"]  # Maximum optimization + SIMD + bulk memory + threads
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals,+sign-ext"]  # Required for wasm-bindgen-rayon SharedArrayBuffer support

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O0", "--enable-simd", "--enable-bulk-memory", "--enable-threads"]  # Development with atomics and bulk memory
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals,+sign-ext"]  # Required for wasm-bindgen-rayon SharedArrayBuffer support
